<?xml version="1.0"?>
<package>
  <name>vicon_mocap</name>
  <version>0.0.1</version>
  <description>The vicon_mocap metapackage</description>

  <maintainer email="email@todo.com">Kartik Mohta</maintainer>
  <maintainer email="email@todo.com">John Yao</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>vicon</run_depend>
  <run_depend>vicon_odom</run_depend>
  <run_depend>vicon_driver</run_depend>

  <export>
    <metapackage/>
 </export>
</package>
